Actions: fixed alignment in date area

--- a/app/sass/_action-time.scss
+++ b/app/sass/_action-time.scss
@@ -14,6 +14,7 @@
        background: $red;
        color: $white;
        border-radius: $border-rad;
+       text-align: center;
 
        &_finished {
          background: #f3f3f3;
